<resources>
    <string name="app_name">LogoQuiz</string>
    <string name="level">Level %1$d</string>
    <string name="close_app">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="sounds">Sounds</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="vibration">Vibration</string>
    <string name="guidelines">Guidelines</string>
    <string name="guidelines_title">Game Accessibility Guidelines</string>
    <string name="guidelines_text_part_1">This is a logo quiz game. Your´re supposed to guess the names behind the logos.
        Some of the logos have their names hidden and you´ll have to guess them based on their background.
        Recognizing only shapes and colors can make it pretty hard sometimes. Logos are divided in different categories.
        Each category has 10 levels and each level has 9 logos. The levels in the beginning include more recognizable logos.
        As the game progresses, levels become more difficult. </string>
    <string name="guidelines_text_part_2">In the first level you´ll have to guess 6 out of 9 logos to open the second level.
        Otherwise levels will open every 8 guessed logos. For example, to open the third level you´ll need to guess total of 14 logos.
        All the guessed logos of the category are counted together. You are given 10 hints and you´ll get a new hint everyday you´ll play the game.
        Notice that front and end parts such as "FC" and the articles such as "The" are often removed from the words.
        Spell out all numbers. For example "1" is "one" and "20" is "twenty". Thank you for reading and have a nice time playing the game. </string>
    <string name="shared_element1">shared_element1</string>
    <string name="shared_element2">shared_element2</string>
    <string name="shared_element3">shared_element3</string>
    <string name="shared_element4">shared_element4</string>
    <string name="shared_element5">shared_element5</string>
    <string name="shared_element6">shared_element6</string>
    <string name="shared_element7">shared_element7</string>
    <string name="shared_element8">shared_element8</string>
    <string name="shared_element9">shared_element9</string>
</resources>
