<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="24sp"/>

    <Switch
            android:id="@+id/sounds"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/sounds"
            android:textSize="18sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:showText="true"
            tools:checked="true"/>

    <Switch
            android:id="@+id/vibration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/vibration"
            android:textSize="18sp"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:showText="true"
            tools:checked="true"/>

</LinearLayout>