<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center">
        <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="32sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/logo1"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element1"
                tools:targetApi="lollipop" />

        <ImageView
                android:id="@+id/logo2"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element2"
                tools:targetApi="lollipop" />

        <ImageView
                android:id="@+id/logo3"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element3"
                tools:targetApi="lollipop" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:weightSum="3"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/logo4"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element4"
                tools:targetApi="lollipop" />

        <ImageView
                android:id="@+id/logo5"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element5"
                tools:targetApi="lollipop" />

        <ImageView
                android:id="@+id/logo6"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element6"
                tools:targetApi="lollipop" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:weightSum="3"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/logo7"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element7"
                tools:targetApi="lollipop" />

        <ImageView
                android:id="@+id/logo8"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element8"
                tools:targetApi="lollipop" />

        <ImageView
                android:id="@+id/logo9"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:transitionName="@string/shared_element9"
                tools:targetApi="lollipop" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

        <ImageView
                android:id="@+id/previous_level"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="40dp"
                android:src="@drawable/arrow_left"
                app:layout_constraintLeft_toLeftOf="parent"/>
        <ImageView
                android:id="@+id/next_level"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>